--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 ##무시할 폴더
-venv/
-rawdata/
-findata/
-chroma_db/
+venv
+rawdata
+findata
+chroma_db
 
 
 __pycache__/
@@ -12,6 +12,8 @@ __pycache__/
 ##무시할 파일
 *.env
 *.json
+*.bin
+*.csv
 
 
 # Chroma DB 제거
